# OrianBuilder

./: .gitignore  .oxlintrc.json  AGENTS.md  CLA.md  CONTRIBUTING.md  README.md  SECURITY.md  forge.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  vite.main.config.mts  vitest.eval.config.ts
.github/prompts/: codex-pr-review.txt
.github/workflows/: README.md  closed-issue-comment.yml  codex-pr-review.yml
docs/: agent_architecture.md  architecture.md  i18n.md
docs/adrs/: 0001-host-capability-interface.md  0003-authentication-authorization-model.md
e2e-tests/: local_agent_supabase_deploy_progress.spec.ts
e2e-tests/snapshots/: local_agent_advanced.spec.ts_local-agent---mention-apps-1.txt  local_agent_ask.spec.ts_local-agent-ask-mode-1.txt  local_agent_auto.spec.ts_local-agent---auto-model-1.txt  local_agent_basic.spec.ts_local-agent---dump-request-1.txt  local_agent_basic.spec.ts_local-agent---read-then-edit-1.aria.yml  mention_app.spec.ts_mention-app-without-pro-1.txt
native/tensorrt-runner/: CMakeLists.txt  README.md
native/tensorrt-runner/src/: main.cpp
native/trt-llm-runner/: runner.py
rules/: adding-settings.md  chat-message-indicators.md  claude-github-workflows.md  e2e-testing.md  git-workflow.md  local-agent-tools.md  openai-reasoning-models.md  supabase-functions.md
scaffold/: AI_RULES.md  index.html
scaffolds/astro/: AI_RULES.md  package.json
scripts/: build-tensorrt-engine.ps1  build-tensorrt-runner.ps1  build-trt-llm-engine.ps1
src/: backup_manager.ts  main.ts  router.ts
testing/: README.md
(+257 files in other folders)
